Make sure content doesn't wrap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: row;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
 }
@@ -12,7 +13,7 @@ body {
   margin: 0;
 }
 .site-container {
-  width: calc(100vw - 330px);
+  width: 100%;
   height: 100vh;
   overflow: scroll;
   margin: 0;
